--- a/thesis.tex
+++ b/thesis.tex
@@ -237,6 +237,7 @@ Kraków, 2012
 
 %\listoftables  % print list of tables
 
+\lstset{language=XML, tabsize=4,caption=XML Schema dla pliku konfiguracyjnego,label=lst:xml_schema}
 \appendix
 \chapter{XML Schema dla pliku konfiguracyjnego}
 \lstset{caption={Plik konfiguracyjny xml},label=DescriptiveLabel}
