--- a/thesis.tex
+++ b/thesis.tex
@@ -239,7 +239,9 @@ Kraków, 2012
 
 \appendix
 \chapter{XML Schema dla pliku konfiguracyjnego}
+\lstset{caption={Plik konfiguracyjny xml},label=DescriptiveLabel}
 \begin{lstlisting}
+\caption{Model "Hub and spoke"}\label{fig:hub_and_spoke}
 <?xml version="1.0" encoding="utf-8"?>
 <xs:schema elementFormDefault="qualified" xmlns:xs="http://www.w3.org/2001/XMLSchema">
 	<xs:element name="speechProcessingInstructions">
@@ -268,5 +270,6 @@ Kraków, 2012
 	</xs:complexType>
 	
 </xs:schema>
+
 \end{lstlisting}
 \end{document}
