Added list of listings to table of contents.

--- a/thesis.tex
+++ b/thesis.tex
@@ -232,8 +232,9 @@ Kraków, 2012
 %: ----------------------- list of figures/tables ------------------------
 
 \listoffigures	% print list of figures
-\renewcommand*{\lstlistlistingname}{Spis fragmentów kodu}
+\renewcommand{\lstlistlistingname}{Spis fragmentów kodu}
 \lstlistoflistings
+\addcontentsline{toc}{chapter}{Spis fragmentów kodu}
 
 %\listoftables  % print list of tables
 
