Added 'Rozdzial' to chapter name.

--- a/thesis.tex
+++ b/thesis.tex
@@ -47,7 +47,7 @@
 %\def\refname{Literatura}%
 %\def\abstractname{Streszczenie}%
 %\def\bibname{Bibliografia}%
-%\def\chaptername{Rozdzia\l}%
+%\def\chaptername{Rozdzial}%
 %\def\appendixname{Dodatek}%
 %\def\contentsname{Spistre\'sci}% spis treści
 %\def\listfigurename{Spisrysunk\'ow}% spis rysunków
@@ -156,7 +156,7 @@ Kraków, 2012
 % the main text starts here with the introduction, 1st chapter,...
 \mainmatter
 
-\renewcommand{\chaptername}{} % uncomment to print only "1" not "Chapter 1"
+\renewcommand{\chaptername}{Rozdział} % uncomment to print only "1" not "Chapter 1"
 
 
 %: ----------------------- subdocuments ------------------------
