--- a/7/discussion.tex
+++ b/7/discussion.tex
@@ -22,7 +22,7 @@ Co do wyboru sposobu integracji, jak zostało to zaprezentowane wyżej istnieje 
 	\item Różnorodność - wszystkie istniejące implementacje ESB oferują wiele różnych endpoint'ów, służących jako interfejsy wejścia/wyjścia, obsługujących wiele formatów
 \end{itemize}
 Wykorzystanie takiego podejścia daje też inny duży, plus jakim niewątpliwie jest łatwość ukrywania implementacji. Klienci systemu opartego na takim rozwiązaniu nie będą wiedzieć z jakich konkretnie serwisów korzystają, przez co w razie wystąpienia kłopotów czy też pojawienia się nowszego, lepszego lub ciekawszego rozwiązania można taki serwis łatwo podmienić, bez konieczności zmieniania API. Kolejną dużą zaletą wykorzystania ESB, jest możliwość wykorzystania routingu. Dzięki temu sterowanie całym systemem i kolejnością wywoływania poszczególnych serwisów jest możliwa za pomocą prostego pliku xml.  \\
-Zaprezentowana praca magisterska zagłębia się w dziedzinę, która jest dość nowatorska. Zaproponowane rozwiązanie i przykładowa implementacja pokazują zarówno, iż temat jest ciekawy i warty dalszych badań oraz, że istniejące w tej chwili rozwiązania integracyjne są odpowiednie dla specyficznej dziedziny jaką są multimedia i można jest z powodzeniem stosować. 
+Zaprezentowana praca magisterska zagłębia się w dziedzinę, która jest dość nowatorska. Zaproponowane rozwiązanie i przykładowa implementacja pokazują zarówno, iż temat jest ciekawy i warty dalszych badań oraz, że istniejące w tej chwili rozwiązania integracyjne są odpowiednie dla specyficznej dziedziny jaką są multimedia i można je z powodzeniem stosować. 
 
 % ----------------------- contents from here ------------------------
 
