--- a/3/technologie.tex
+++ b/3/technologie.tex
@@ -213,23 +213,20 @@ Poza wyborem języka istnieje też możliwość wyboru lektora, różnią się o
 Google Translate to płatna usługa Google'a umożliwiająca tłumaczenie tekstu pomiędzy tysiącami dostępnych par języków. Poza tłumaczeniem usługa ta umożliwia również rozpoznanie języka. API udostępniane przez korporację opiera się o architekturę REST, składa się z trzech metod:
 \begin{itemize}
 	\item translate - tłumaczy tekst z języka źródłowego na docelowy, przykład:
-		\begin{figure}[!h]
-			\centering
-			\includegraphics[scale=0.95]{translateExp.png} 
-			\caption{Tłumaczenie słowa hello z angielskiego na polski}
-		\end{figure}
+		\lstset{caption={Tłumaczenie słowa hello z angielskiego na polskil},label=DescriptiveLabel}
+			\begin{lstlisting}
+				https://www.googleapis.com/language/translate/v2?key=INSERT-YOUR-KEY&q=hello%20world&source=en&target=pl
+			\end{lstlisting}
 	\item languages - zwraca listę języków wspieranych przez translator
-		\begin{figure}[!h]
-			\centering
-			\includegraphics[scale=0.95]{listExp.png} 
-			\caption{Przykład pobrania listy dostępnych języków}
-		\end{figure}
+		\lstset{caption={Przykład pobrania listy dostępnych językówl},label=DescriptiveLabel}
+			\begin{lstlisting}
+				https://www.googleapis.com/language/translate/v2/languages?key=INSERT-YOUR-KEY&target=zh-TW
+			\end{lstlisting}
 	\item detect - rozpoznaje język tekstu źródłowego
-		\begin{figure}[!h]
-			\centering
-			\includegraphics[scale=0.95]{detectExp.png} 
-			\caption{Przykład detekcji języka}
-		\end{figure}
+		\lstset{caption={Przykład detekcji językal},label=DescriptiveLabel}
+			\begin{lstlisting}
+				https://www.googleapis.com/language/translate/v2/detect?key=INSERT-YOUR-KEY&q=google+translate+is+fast
+			\end{lstlisting}
 \end{itemize}
 Parametr key=INSERT-YOUR-KEY służy korporacji do indentyfikowania usługobiorcy, na jego podstawie naliczane są opłaty. Jak widać REST w API Google Translate różni się nieznacznie od tradycyjnego pojmowania tej architektury. Zamiast dostarczać dostęp do zasobów, dostarczarczany jest dostęp do usług, stosując takie podejście uzyskano możliwość wykorzystania jednego URI jako całego API. 
 
