--- a/thesis.tex
+++ b/thesis.tex
@@ -167,8 +167,9 @@ Kraków, 2012
 \include{1_introduction/introduction}	% background information
 \include{2/problem_analysis}
 
-\include{3/technologie}						% aims of the project
+					% aims of the project
 \include{6/projekt_i_implementacja}
+\include{3/technologie}	
 \include{4/wymagania}						
 	
 %\include{5/projects_implementations}
