--- a/0_frontmatter/abstract.tex
+++ b/0_frontmatter/abstract.tex
@@ -4,9 +4,9 @@
 %\begin{abstractslong}    %uncommenting this line, gives a different abstract heading
 \begin{abstracts}        %this creates the heading for the abstract page
 
-Rozwój technologiczny, a w szczególności rozwój komputerów i technologii z nimi związanych w ciągu ostatnich lat jest bardzo szybki. Zmieniają się zarówno podzespoły, moc obliczeniowa, rozmiary, wygląd a nawet urządzenia wejścia/wyjścia. Komputery wkroczyły, lub są temu bardzo bliskie, do niemal każdej dziedziny życia. W związku z tym zmienia się sposób komunikacji między użytkownikiem a komputerem. W ostatnich czasach można zaobserwować dążenie inżynierów i projektantów do uczynienia komunikacji z komputerem jak najbardziej naturalną. Pomysły są różne od 'kontrolerów bez kontrolera' jak Microsoft Kinect \footnote {http://www.xbox.com/en-US/kinect}, poprzez rozwiązania 'ruchowe' podobne do tego na jakie zdecydowało się Sony \footnote{http://www.sony.com/} w swoim kontrolerze PlayStation Move \footnote{http://us.playstation.com/ps3/playstation-move/} poprzez klasyczne  jak mysz i klawiatura. Jednak najbardziej naturalnym sposobem porozumiewania się wydaje się głos. Najbardziej znanym, bo napewno nie pionierskim, systemem który komunikuję się z użytkownikiem za pomocą głosu jest Apple Siri \footnote{http://www.apple.com/iphone/features/siri.html} - osobisty asystent, "żyjacy" wewnątrz systemu, umożliwiający dostęp do jego funkcji za pomocą mowy.\\
-Niniejsza praca skupia się na dokładnym przedstawieniu problemu przetwarzania mowy, różnych sposobów integracji oraz tego jak specyficzna domena problemu wpływa na wybór sposobu integracji. Celem pracy nie było stworzenie gotowego do użytku, kompletnego, w pełni sprawnego produktu a zbadanie czy jest zapotrzebowanie na taki produkt i czy stosowane podejście ma sens. Powstały w czasie pisania tej pracy prototyp należy traktować tylko jako przykładową implemetancje takiego systemu. W związku z tym niektóre zagadnienia, dość istotne z punktu widzenia potencjalnego odbiorcy, ale nie będące ściśle powiązane z celem pracy zostały pominięte lub też niedopracowane. 
- systemu.
+Rozwój technologiczny, a w szczególności rozwój komputerów i technologii z nimi związanych w ciągu ostatnich lat jest bardzo szybki. Zmieniają się zarówno podzespoły, moc obliczeniowa, rozmiary, wygląd a nawet urządzenia wejścia/wyjścia. Komputery wkroczyły, lub są temu bardzo bliskie, do niemal każdej dziedziny życia. W związku z tym zmienia się sposób komunikacji między użytkownikiem a komputerem. W ostatnich czasach można zaobserwować dążenie inżynierów i projektantów do uczynienia komunikacji z komputerem jak najbardziej naturalną. Pomysły są różne od 'kontrolerów bez kontrolera' jak Microsoft Kinect \footnote {http://www.xbox.com/en-US/kinect}, poprzez rozwiązania 'ruchowe' podobne do tego na jakie zdecydowało się Sony \footnote{http://www.sony.com/} w swoim kontrolerze PlayStation Move \foo
+tnote{http://us.playstation.com/ps3/playstation-move/} poprzez klasyczne  jak mysz i klawiatura. Jednak najbardziej naturalnym sposobem porozumiewania się wydaje się głos. Najbardziej znanym, bo na pewno nie pionierskim, systemem który komunikuję się z użytkownikiem za pomocą głosu jest Apple Siri \footnote{http://www.apple.com/iphone/features/siri.html} - osobisty asystent, "żyjący" wewnątrz systemu, umożliwiający dostęp do jego funkcji za pomocą mowy.\\
+Niniejsza praca skupia się na zbadaniu jak specyficzna domena problemu jaką jest przetwarzanie mowy wpływa na sposób integracji serwisów oferujących takie usługi. Celem pracy nie było stworzenie gotowego do użytku, kompletnego, w pełni sprawnego produktu a zbadanie czy jest zapotrzebowanie na taki produkt i czy stosowane podejście ma sens. Powstały w czasie pisania tej pracy prototyp należy traktować tylko jako przykładową implemetancje takiego systemu. W związku z tym niektóre zagadnienia, dość istotne z punktu widzenia potencjalnego odbiorcy, ale nie będące ściśle powiązane z celem pracy zostały pominięte lub też niedopracowane. 
 \end{abstracts}
 %\end{abstractlongs}
 
