--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -120,6 +120,12 @@
 	publisher = "Manning Publications"
 }
 
+@book{och2003,
+	authot = "Franz Josef Och",
+	title = "Statistical Phrase-Based Translation",
+	year = 2003,
+	publisher = "University of Southern California"
+}
 
 @article{name06,
 	Author = {Name},
